mType/tests/testFiles/typeChecking/error/functionReturnTypeMismatchStringToBool.mt
function sample(): string {
    return "sample";
}

bool test = sample();  // Should fail